Bug 1757162 - Initialize instance members before processing function formal parameters r=arai

Differential Revision: https://phabricator.services.mozilla.com/D140103